<resources>
    <string name="app_name">Healthy Food</string>

    <string name="bottom_home_item">Home</string>
    <string name="bottom_coup_de_coeur_item">My Favorite</string>
    <string name="bottom_add_food_item">Add</string>

    <!--Page d'accueil-->
    <string name="home_page_title">To discover</string>
    <string name="home_page_title2">Pick a food </string>
    <!--    Page des coup de coeur-->
    <string name="Coup_de_coeur_page_food_title">My Favorite</string>
    <!--Page d'ajout de plan-->
    <string name="add_food_title">Add a food</string>
    <string name="add_food_page_upload_button">Load image</string>
    <string name="add_food_page_Name_input">@string/item_food_name</string>
    <string name="add_food_page_description_input">@string/item_food_description </string>

    <string-array name="add_food_page_calorie_input">
    <item>Calorie : faible</item>
    <item>Calorie : Moyenne</item>
    <item>Calorie : Elevée</item>
</string-array>
    <string-array name="add_food_page_digestion_input">
    <item>Digestion : Lente</item>
    <item>Digestion : Moyenne</item>
    <item>Digestion : Rapide</item>
    </string-array>

    <string name="add_food_page_confirm_button">Submit</string>

    <!--Fenetre Popup de details-->
    <string name="popup_food_name">Food Name</string>
    <string name="popup_food_description">Description</string>
    <string name="popup_food_description_subtitle">Little description</string>
    <string name="popup_food_calorie_title">Calorie</string>
    <string name="popup_food_calorie_subtitle">faible</string>
    <string name="popup_food_digestion_title">digestion</string>
    <string name="popup_food_digestion_subtitle">lente</string>












    <!--Planification customise-->
    <string name="item_food_name">Name of food</string>
    <string name="item_food_description">Description </string>






</resources>