<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/flocon" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/popup_food_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_food_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@id/cardView2"
        app:layout_constraintTop_toTopOf="@id/cardView2"
        android:layout_marginLeft="30dp"
         />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        android:layout_marginLeft="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/popup_food_description"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/item_food_description"
        app:layout_constraintStart_toStartOf="@id/cardView2"
        app:layout_constraintTop_toBottomOf="@id/cardView2" />

    <TextView
        android:id="@+id/popup_food_description_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_food_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_food_description"
        app:layout_constraintTop_toBottomOf="@id/popup_food_description"
      />

    <TextView
        android:id="@+id/popup_food_calorie_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_food_calorie_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_food_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_food_description_subtitle"

         />

    <TextView
        android:id="@+id/popup_food_calorie_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Faible"
        app:layout_constraintStart_toStartOf="@+id/popup_food_calorie_title"
        app:layout_constraintTop_toBottomOf="@id/popup_food_calorie_title" />

    <TextView
        android:id="@+id/popup_food_digestion_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_food_digestion_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_food_calorie_subtitle"
        app:layout_constraintTop_toBottomOf="@id/popup_food_calorie_subtitle"
        />


    <TextView
        android:id="@+id/popup_food_digestion_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lente"
        app:layout_constraintStart_toStartOf="@id/popup_food_digestion_title"
        app:layout_constraintTop_toBottomOf="@id/popup_food_digestion_title"
         />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_food_digestion_subtitle"/>



    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

    <ImageView
        android:id="@+id/start_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:src="@drawable/ic_unstar"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation" />

</androidx.constraintlayout.widget.ConstraintLayout>